[package]
name = "emojimarket_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.18.22"
thiserror = "1.0"
borsh = "=0.10.3"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
indexmap = "=2.6.0"
